Fixed bug allowing selection of negative row id when clicking the column header on tables with no rows or all the rows filtered. Added background container of minimized windows allowing the users see when tables goes behind it.

--- a/priv/static/styles/dderl.css
+++ b/priv/static/styles/dderl.css
@@ -834,6 +834,12 @@ ul.dropdown.floatNone ul li {
 	height: 15px;
 }
 
+/* dialog extend minimize container */
+#dialog-extend-fixed-container {
+    background-color: lightblue;
+    border: 1px solid black;
+}
+
 /* d3 graphs */
 .d3-container {
     position: absolute;
